Автоматическая корректировка полей в форме

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ button[type=submit]:active {
     color: white;
 }
 
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
 input[type=text], input[type=number], select, textarea {
     box-sizing: border-box;
 
